[package]
name = "approximate_tsp_solver"
version = "0.1.0"
authors = ["Ulrich Johan Isachsen <ulrich@isachsen.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdtree = "0.5.1"
rand = "0.8.4"

image = "0.23.14"
imageproc = "0.22.0"
palette = "0.6.0"

num-traits = "0.2.14"
